<resources>
    <string name="app_name">FAMILY TASKER</string>
    <string name="HintEmail">Email</string>
    <string name="HintName">Nombre</string>
    <string name="HintPassword">Password</string>
    <string name="buttonRegistrar">Crear Cuenta</string>
    <string name="buttonLogin">Iniciar Sesión</string>
    <string name="VinculoSeccion">¿No tienes una cuenta? Regístrate aquí</string>
    <string name="VinculoInicio">¿Ya tienes una cuenta? Inicia Seccion aquí</string>
    <string name="HintNombrelista">Nombre de la lista</string>
    <string name="textBtnCrearLista">Crear</string>
    <string name="TxtTituloListaTareas">Mi lista:</string>
    <string name="TxtTituloTareas">Tareas</string>
    <string name="HintNombreTarea">Creé una Tarea</string>
    <string name="txtTerminada">Completar</string>
    <string name="txtEliminar">Eliminar </string>
    <string name="itemlistatxtbtn">Eliminar</string>
    <string name="txtbtnCerrarSesion">Cerrar Sesión</string>
    <string name="txtbtnAtras">Atras</string>
</resources>