<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="64dp"
    android:paddingBottom="32dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="150dp"
            android:src="@drawable/logo_familytasker"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>


    <EditText
        android:id="@+id/editTextCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/HintEmail"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/black"
        android:textColor="@android:color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/HintPassword"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textSize="16sp"
        android:inputType="textPassword" >
    </EditText>


    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/black"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />


    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        android:text="@string/VinculoSeccion" />

</LinearLayout>
