<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@color/white">

    <!-- Toolbar para el menú -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="@color/white"
        android:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />


    <!-- Linear layout horizontal para el botón de crear la lista -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/editTextListName"
            android:layout_width="280dp"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/HintNombrelista" />

        <!-- Botón para crear la lista -->
        <Button
            android:id="@+id/buttonCreateList"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/black"
            android:text="@string/textBtnCrearLista" />

    </LinearLayout>

    <!-- Listado de listas de tareas existentes -->
    <TextView
        android:id="@+id/textViewListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TxtTituloListaTareas"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <ListView
        android:id="@+id/listViewLists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"/>

</LinearLayout>
